--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,7 @@ body {font-family: 'Fira Code', monospace;}
 .subsection-title {color: rgb(85, 73, 173); font-weight: 700;}
 .section-title, .subsection-title {text-transform: uppercase; font-family: 'Roboto mono', monospace;}
 .left p {margin-top: 0px}
-.profil-image {width: 102px; height: 102px; margin-bottom: 20px; background: url(../malek.png) no-repeat center center;
+.profil-image {width: 102px; height: 102px; margin-bottom: 20px; background: url(../malek-alt.png) no-repeat center center;
             -webkit-background-size: cover;
             -moz-background-size: cover;
             -o-background-size: cover;
@@ -12,7 +12,6 @@ body {font-family: 'Fira Code', monospace;}
             transition: ease-in-out .1s all;
               }
 .profil-secret-link {width: fit-content; height: fit-content; display: block;}
-.profil-secret-link:hover .profil-image {background: url(../malek-alt.jpg) no-repeat center center; background-size: contain;}
 .name h1, .name h4 {text-transform: uppercase; margin: 0px;}
 .name h1 {font-weight: bold; font-size: 35px;}
 .name h4 {font-weight: 600;}
