correct profile picture.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,7 @@ body {font-family: 'Fira Code', monospace;}
 .subsection-title {color: rgb(85, 73, 173); font-weight: 700;}
 .section-title, .subsection-title {text-transform: uppercase; font-family: 'Roboto mono', monospace;}
 .left p {margin-top: 0px}
-.profil-image {width: 102px; height: 102px; margin-bottom: 20px; background: url(../malek-alt.png) no-repeat center center;
+.profil-image {width: 102px; height: 102px; margin-bottom: 20px; background: url(../malek-alt.jpg) no-repeat center center;
             -webkit-background-size: cover;
             -moz-background-size: cover;
             -o-background-size: cover;
